# tsw-controller-app-arch-info

./: CHANGELOG.md  PROFILE_EXPLAINER.md  README.md  SETTING_UP_VIRTUAL_CONTROLLER.md  USING_VIRTUAL_CONTROLS.md
go-app/: app.go  app_models.go  main.go
profile-builder-schema/: profile.api_control_assignment.schema.json  profile.assignment_action.schema.json  profile.assignment_api_control_action.schema.json  profile.assignment_conditions.schema.json  profile.assignment_direct_control_action.schema.json  profile.assignment_virtual_action.schema.json  profile.direct_control_assignment.schema.json  profile.schema.json  profile.sync_control_assignment.schema.json
shared-profiles/: 1972mk2tubestock.tswprofile  acela.tswprofile  acs64.tswprofile  acs64_boston_sprinter.tswprofile  allegra.tswprofile  alp45dp.tswprofile  alp46.tswprofile  amfleet_cabcar.tswprofile  awc_class805.tswprofile  bi_level_cabcar_ctx.tswprofile  bilevel_rotem_car.tswprofile  bnsf_es44c4.tswprofile  bnsf_sd40.tswprofile  br110.tswprofile  br111.tswprofile  br112.tswprofile  br114.tswprofile  br143_dresden_leipzig.tswprofile  br143_nahverkehr_dresden.tswprofile  br146.tswprofile  br155.tswprofile  br182_185.tswprofile  br193.tswprofile  br363_365.tswprofile  br401.tswprofile  br411_403_406.tswprofile  br423_425_430.tswprofile  br442_1442.tswprofile  br463_nwagen.tswprofile  br628.tswprofile  br642.tswprofile  class08.tswprofile  class101.tswprofile  class142.tswprofile  class150.tswprofile  (+45 more)
tsc-controller-mod/tscmod/: Cargo.toml  Makefile  build.rs
tsc-controller-mod/tscmod/src/: lib.rs
(+135 files in other folders)
