[package]
name = "tscmod"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tungstenite = "0.28.2"
futures-util = "0.3.31"
libloading = "0.9.0"
libraildriver = "0.1.3"
once_cell = "1.20.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
]

[build-dependencies]
cbindgen = "0.28.0"

[lib]
name = "tscmod"
crate-type = ["cdylib"]
